network-policies/backend-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: default

spec:
  podSelector:
    matchLabels:
      app: backend-todo   # policy applies to backend pods

  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-todo # policy applies for frontend only
      ports:
        - protocol: TCP
          port: 5000
